[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "maintainability"
version = "0.2.4"
description = "Codebase Maintainability Analyzer"
authors = ["voynow <voynow99@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["maintainability/cli/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
pathspec = "*"
supabase = "*"
llm_blocks = "0.3.7"
fastapi = "*"
uvicorn = "*"
requests = "*"
pytest = "*"


[tool.poetry.scripts]
maintainability = "maintainability.cli.src.main:cli_runner"

[tool.turbo_docs]
ignore = [
    "__pycache__",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".git",
    ".env",
    "poetry.lock",
    "LICENSE",
    ".gitignore",
    "config.py",
    "README.md",
    ".pytest_cache",
    ".vercel",
]
